<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/kongbai"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/kongbai"
        android:background="@color/white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/shadow_buttom"/>
        <LinearLayout
            android:id="@+id/resultlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:text="dahdisjdoasd"/>
            <TextView
                android:id="@+id/relation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="sadlhfdioasjdlsmflashoidjoasl;nfdasidfhal;djsl"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/shadow_buttom"/>
        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:stretchColumns="*"
            >
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/b_1"
                    style="@style/MyButton"
                    android:textColor="@color/blue_1"
                    android:text="@string/qizi"/>
                <Button
                    android:id="@+id/b_2"
                    style="@style/MyButton"
                    android:text="@string/zhangfu"/>
                <Button
                    android:id="@+id/b_3"
                    style="@style/MyButton"
                    android:text="@string/daerzi"/>
                <Button
                    android:id="@+id/b_4"
                    style="@style/MyButton"
                    android:text="@string/xiaoerzi"/>
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/b_5"
                    style="@style/MyButton"
                    android:text="@string/danver"/>
                <Button
                    android:id="@+id/b_6"
                    style="@style/MyButton"
                    android:text="@string/xiaonver"/>
                <Button
                    android:id="@+id/b_7"
                    style="@style/MyButton"
                    android:text="@string/fuqin"/>
                <Button
                    android:id="@+id/b_8"
                    style="@style/MyButton"
                    android:text="@string/muqin"/>
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/b_9"
                    style="@style/MyButton"
                    android:text="@string/gege"/>
                <Button
                    android:id="@+id/b_10"
                    style="@style/MyButton"
                    android:text="@string/didi"/>
                <Button
                    android:id="@+id/b_11"
                    style="@style/MyButton"
                    android:text="@string/jiejie"/>
                <Button
                    android:id="@+id/b_12"
                    style="@style/MyButton"
                    android:text="@string/meimei"/>
            </TableRow>
            <TableRow android:layout_weight="1">
                <Button
                    android:id="@+id/b_clear"
                    style="@style/MyButton"
                    android:text="@string/clear"/>
                <Button
                    android:id="@+id/b_remove"
                    style="@style/MyButton"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background_color"
                    android:text="@string/remove"/>
            </TableRow>

        </TableLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/shadow_buttom"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/fab"
        android:layout_below="@id/kongbai"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:background="@drawable/button_cycle_background"
        android:scaleType="fitXY"
        android:src="@drawable/ic_add_white_48dp"
        />
</RelativeLayout>