<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/shadow_buttom"/>
    <ImageView
        android:id="@+id/about_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/picture_11"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/ablou_text"/>
        <TextView
            android:id="@+id/about_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ablou_address"/>
        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/about_copyright"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/shadow_buttom"/>

</LinearLayout>